# ChangeLog for net-analyzer/angst
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/angst/ChangeLog,v 1.9 2007/02/19 12:38:00 jokey Exp $

  19 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  15 Feb 2006; Markus Ullmann <jokey@gentoo.org> angst-0.4b-r1.ebuild:
  Removing virtual/libpcap wrt bug #117898

  19 Jul 2005; David Holm <dholm@gentoo.org> angst-0.4b-r1.ebuild:
  Added to ~ppc.

  29 Jan 2005; Daniel Black <dragonheart@gentoo.org> angst-0.4b-r1.ebuild:
  changed net-libs/libpcap depend to virtual/libcap

  08 Jul 2004; Eldad Zack <eldad@gentoo.org> angst-0.4b-r1.ebuild,
  angst-0.4b.ebuild:
  added metadata

  08 Jul 2004; Eldad Zack <eldad@gentoo.org> angst-0.4b-r1.ebuild,
  angst-0.4b.ebuild:
  Cleanup IUSE, S, RDEPEND.

*angst-0.4b-r1 (21 Aug 2003)

  21 Aug 2003; Mike Frysinger <vapier@gentoo.org> :
  Patch to compile against SLOT-ed libnet-1.0.x #17772.

*angst-0.4b (12 Feb 2003)

  07 Mar 2003; Martin Holzer <mholzer@gentoo.org> angst-0.4b.ebuild :
  Fixed Depend to libnet-1.0.*. Closes #17017. 

  12 Feb 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Initial import. Ebuild submitted by Daniel Seyffer <gentoo-bugs@seyffer.de> in #8866.